--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.4.0",
@@ -32,6 +33,7 @@
     "react-router-dom": "^7.1.1",
     "react-select": "^5.10.0",
     "react-syntax-highlighter": "^15.6.1",
+    "react-tooltip": "^5.28.0",
     "rehype-add-classes": "^1.0.0",
     "rehype-highlight": "^7.0.1",
     "rehype-katex": "^7.0.1",
