--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.4.1",
+    "i18next": "^24.2.2",
+    "i18next-browser-languagedetector": "^8.0.4",
+    "i18next-http-backend": "^3.0.2",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
@@ -27,6 +30,7 @@
     "react-datepicker": "^8.1.0",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
+    "react-i18next": "^15.4.1",
     "react-icons": "^5.4.0",
     "react-markdown": "^9.0.3",
     "react-modal": "^3.16.3",
