--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-dropzone": "^14.3.5",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.4.0",
-    "react-markdown": "^9.0.3",
+    "react-markdown": "^9.1.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.1.1",
     "react-select": "^5.10.0",
@@ -41,6 +41,7 @@
     "rehype-add-classes": "^1.0.0",
     "rehype-highlight": "^7.0.1",
     "rehype-katex": "^7.0.1",
+    "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
     "xlsx": "^0.18.5"
