--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
+    "mitt": "^3.0.1",
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
