--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "vite": "^6.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
